Closed Bug 364862 Opened 18 years ago Closed 18 years ago

[FIX]Painting block text decorations uses wrong percentage base for text-indent

Categories

(Core :: Layout: Block and Inline, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: bzbarsky, Assigned: bzbarsky)

Details

Attachments

(1 file)

We end up using the border-rect width of the containing block instead of the content-rect width.
Target Milestone: --- → mozilla1.9alpha
Attached patch FixSplinter Review
Pretty straightforward
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Attachment #249554 - Flags: superreview?(roc)
Attachment #249554 - Flags: review?(roc)
Attachment #249554 - Flags: superreview?(roc)
Attachment #249554 - Flags: superreview+
Attachment #249554 - Flags: review?(roc)
Attachment #249554 - Flags: review+
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: