Use the right percentage base for figuring out text-indent when drawing the text-decoration.  Bug 364862, r+sr=dbaron